# psychic_seamstress

./: Cargo.toml
src/: camera.rs  config.rs  main.rs  property.rs
src/ui/: geometry.rs  image.rs  mod.rs  property.rs  widget.rs
