[package]
name = "psychic_seamstress"
version = "0.1.0"
authors = ["whitequark <whitequark@whitequark.org>"]

[dependencies]
gl = "*"
glfw = "*"
touptek = "*"

[dependencies.nanovg]
git = "https://github.com/KevinKelley/nanovg-rs"
features = ["gl3"]

[dependencies.png]
git = "https://github.com/servo/rust-png"

[profile.dev]
opt-level = 2
