[package]
name = "psychic_seamstress"
version = "0.1.0"
authors = ["whitequark <whitequark@whitequark.org>"]

[dependencies]
gl = "*"
glfw = "*"

[dependencies.touptek]
path = "/home/whitequark/Work/rust-touptek"

[dependencies.xdg]
git = "https://github.com/whitequark/rust-xdg"

[dependencies.nanovg]
git = "https://github.com/KevinKelley/nanovg-rs"
features = ["gl3"]

[dependencies.png]
git = "https://github.com/servo/rust-png"

[dependencies.simd]
git = "https://github.com/huonw/simd"
