[package]
name = "psychic_seamstress"
version = "0.1.0"
authors = ["whitequark <whitequark@whitequark.org>"]

[dependencies]
gl = "*"
glfw = "*"
xdg = "^2.0"
serde = "*"
serde_json = "*"
serde_macros = "*"

[dependencies.touptek]
git = "https://github.com/whitequark/rust-touptek"

[dependencies.nanovg]
git = "https://github.com/whitequark/nanovg-rs"
features = ["gl3"]

[dependencies.png]
git = "https://github.com/servo/rust-png"

[dependencies.opencv]
git = "https://github.com/whitequark/opencv-rust"

[dependencies.simd]
git = "https://github.com/huonw/simd"
